--- a/client/src/App.css
+++ b/client/src/App.css
@@ -21,6 +21,10 @@ h1  {
   text-shadow: 2px 2px 2px #fff;
 }
 
+h3{
+  color: rgb(235, 228, 228);
+}
+
 .hero-image {
   background-image: linear-gradient(rgba(140, 150, 206), rgba(189, 137, 204, 0.2)), url("https://post.healthline.com/wp-content/uploads/2020/08/blueberries-1200x628-facebook-1200x628.jpg");
   height: 100%;
@@ -40,5 +44,53 @@ h1  {
   color: white;
 }
 
+/* search bar start here*/
+* {
+  box-sizing: border-box;
+}
+form.search_form input[type=text]{
+  padding: 10px;
+  font-size: 17px;
+  border: 1px solid grey;
+  float: left;
+  width: 80%;
+  background: #f1f1f1;
+}
+form.search_form button {
+  float: left;
+  width: 20%;
+  padding: 10px;
+  background: #2196F3;
+  color: white;
+  font-size: 17px;
+  border: 1px solid grey;
+  border-left: none; /* Prevent double borders */
+  cursor: pointer;
+}
+form.search_form button:hover {
+  background: #0b7dda;
+}
 
+/* Clear floats */
+form.search_form::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 
+/* search bar end here*/
+
+/* result list start here*/
+.result-list-container ul{
+  text-align: justify;
+  list-style-type: none;
+  border: 1px solid black;
+  padding: 10px;
+  background: #cacee6;
+}
+
+.result-list-container li:first-child{
+  text-align: center;
+  
+}
+/* result list end here*/
